--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,31 @@
+
+akka {
+  persistence {
+    journal {
+      plugin = "leveldb"
+
+      leveldb {
+        dir = "target/persistence/journal"
+      }
+    }
+
+    snapshot-store.local.dir = "target/persistence/snapshots"
+  }
+}
+
+leveldb {
+  dir = "target/persistence/journal"
+  checksum: "off"
+  class: "akka.persistence.journal.leveldb.LeveldbJournal"
+  dir: "target/persistence/journal"
+  fsync: "on"
+  native: "on"
+  plugin-dispatcher : "akka.persistence.dispatchers.default-plugin-dispatcher"
+  replay-dispatcher : "akka.persistence.dispatchers.default-replay-dispatcher"
+}
+
+//akka.persistence.journal.leveldb.dir = "target/journal"
+
 akka {
   loglevel = INFO
   stdout-loglevel = INFO
