--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,27 +1,68 @@
 
 akka {
   persistence {
-    journal {
-      plugin = "leveldb"
-
-      leveldb {
-        dir = "target/persistence/journal"
-      }
-    }
-
-    snapshot-store.local.dir = "target/persistence/snapshots"
+    journal.plugin = "jdbc-journal"
+    snapshot-store.plugin = "jdbc-snapshot-store"
   }
 }
 
-leveldb {
-  dir = "target/persistence/journal"
-  checksum: "off"
-  class: "akka.persistence.journal.leveldb.LeveldbJournal"
-  dir: "target/persistence/journal"
-  fsync: "on"
-  native: "on"
-  plugin-dispatcher : "akka.persistence.dispatchers.default-plugin-dispatcher"
-  replay-dispatcher : "akka.persistence.dispatchers.default-replay-dispatcher"
+akka-persistence-jdbc {
+  slick {
+    driver = "slick.driver.MySQLDriver"
+    db {
+      host = "localhost"
+      host = ${?MYSQL_HOST}
+      port = "13306"
+      port = ${?MYSQL_PORT}
+      name = "akka"
+
+      url = "jdbc:mysql://"${akka-persistence-jdbc.slick.db.host}":"${akka-persistence-jdbc.slick.db.port}"/"${akka-persistence-jdbc.slick.db.name}
+      user = "root"
+      password = ""
+      driver = "com.mysql.jdbc.Driver"
+      keepAliveConnection = on
+      numThreads = 2
+      queueSize = 100
+    }
+  }
+
+  tables {
+    journal {
+      tableName = "journal"
+      schemaName = ""
+      columnNames {
+        persistenceId = "persistence_id"
+        sequenceNumber = "sequence_number"
+        created = "created"
+        tags = "tags"
+        message = "message"
+      }
+    }
+
+    deletedTo {
+      tableName = "deleted_to"
+      schemaName = ""
+      columnNames = {
+        persistenceId = "persistence_id"
+        deletedTo = "deleted_to"
+      }
+    }
+
+    snapshot {
+      tableName = "snapshot"
+      schemaName = ""
+      columnNames {
+        persistenceId = "persistence_id"
+        sequenceNumber = "sequence_number"
+        created = "created"
+        snapshot = "snapshot"
+      }
+    }
+  }
+
+  query {
+    separator = ","
+  }
 }
 
 //akka.persistence.journal.leveldb.dir = "target/journal"
